--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
   background-color: rgba(136, 136, 136, 0.116);
   padding: 10px;
   border: none;
+  border-radius: 10px;
   width: 100%;
   cursor: pointer;
 }
@@ -25,10 +26,23 @@ h1{
 
 nav{
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
+  width: 100%;
+  justify-content: space-between;
   padding: 1rem;
+  background: #e4e4f3;
 }
+
+.nav-menu{
+  font-size: x-large;
+ }
+ 
+ .navbar-container{
+   position: fixed;
+   top: 0;
+   width: 100%;
+   display: flex;
+   flex-wrap: nowrap;
+ }
 
 a{
   color: #000;
@@ -81,7 +95,7 @@ form{
 }
 
 .card:hover{
-  border: 0.5px solid rgb(206, 217, 142);
+  border: 0.5px solid rgb(53, 227, 30);
 }
 
 .card-grid{
@@ -104,7 +118,8 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #76cff5;
+  border-style: double;
   text-align: left;
   padding: 8px;
 }
@@ -117,6 +132,33 @@ tr:nth-child(even) {
   background-color: #12121296;
   color: white;
 }
+
 .dark > a {
   color: white;
+}
+
+.card {
+  width: 300px;
+  border: none;
+  border-radius: 5px;
+  margin: 0.5%;
+  align-items: center;
+  flex-direction: column;
+  flex-basis: fit-content;
+}
+
+.img-container{
+  display: flex;
+  align-items: center;
+}
+
+.img-container img{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+}
+
+.dentist-panel{
+  margin-top: 11%;
 }
