--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 .favButton{
-  background-color: rgba(136, 136, 136, 0.116);
+  background-color: transparent;
   padding: 10px;
   border: none;
   border-radius: 10px;
@@ -61,9 +61,10 @@ footer {
   padding: 2rem;
   position: relative;
   bottom: 0;
-  width: 90%;
+  width: 100%;
   height: 40px;
-  margin-top: 2rem;
+  margin-top: 10%;
+  background-color: #ff996d;
 }
 
 footer > img{
@@ -165,4 +166,73 @@ tr:nth-child(even) {
 
 .form-spacer {
   margin-top: 10px;
+}
+
+.border {
+  border: solid;
+}
+
+.detail-container {
+  display: flex;
+  border: solid;
+  justify-content: flex-start;
+  margin: 2% 20% 10% 20%;
+}
+
+.detail-col {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
+  margin-left: 1%;
+}
+
+.detail-row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.lbl {
+  align-self: flex-start;
+  color: #76cff5;
+  width: 400px;
+  margin-left: 1%;
+}
+
+h3{
+  display: inline;
+}
+
+.dh-logo {
+  width: 300px;
+  margin-left: 10%;
+}
+
+.social-networks {
+  width: 100%;
+  display: flex;
+  margin: 0% 0% 0% -10%;
+  justify-content: flex-end;
+}
+
+.spacer {
+  margin-left: 5%;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.h3 .title {
+  margin-left: 10px;
+}
+
+.dent-id {
+  color: #76cff5;
+  margin-left: 10px;
+  margin-right: 10px;
 }
